clean up api docs to remove redundenacies
update all controllers

remove unneeded files

move to task executor

write controller
