# openapi/openapi.yml
@@ -22,7 +22,7 @@ tags:
     description: Administration functions for the grading server
   - name: user
     description: User management functions for the grading server
-  - name: Tasks
+  - name: tasks
     description: Async task service for the grading server
 
 paths:
@@ -68,42 +68,49 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Course"
-  /admin/course/new/{canvas_id}:
+  /admin/course/{course_id}/import:
     post:
       tags:
         - admin
-      operationId: new_course
+      operationId: import_course
       summary: "Import course from Canvas"
       description: |
-        Create a new course in system using a Canvas course as a template.
-        Replies with populated template values, but those values must be committed by updating the course.
+        Imports data from Canvas into an existing course
       security:
         - openIDC: [admin:write]
       parameters:
-        - name: canvas_id
+        - name: course_id
           required: true
-          description: "The Canvas course ID"
+          description: "The course id"
           in: path
           schema:
             type: string
-            example: "123456"
+            example: "999-9999-9999-99"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CourseSyncTask"
       responses:
-        201:
-          description: "A empty course has been created"
+        202:
+          description: "Task Queued"
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Course"
+                type: array
+                items:
+                  $ref: "#/components/schemas/Task"
         404:
-          description: "Canvas course not found"
+          description: "Course not found"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
               example:
-                error_source: "Canvas Service"
-                error_message: "Error: course id '123456' not found"
-        401:
+                error_source: "Course Service"
+                error_message: "Error: course id not found"
+        403:
           description: "An authentication error occurred"
           content:
             application/json:
@@ -137,8 +144,8 @@ paths:
             schema:
               $ref: "#/components/schemas/Course"
       responses:
-        202:
-          description: "Course update request accepted"
+        201:
+          description: "Updated course"
         404:
           description: "Course does not exist"
           content:
@@ -191,9 +198,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Course"
+        404:
+          description: "Course does not exist"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+              example:
+                error_source: "course_creation"
+                error_message: "Course '999-9999-9999-99' does not exist"
 
-  /admin/course/{course_id}/update:
-    put:
+  /admin/course/{course_id}/sync:
+    post:
       tags:
         - admin
       operationId: sync_course
@@ -209,84 +225,27 @@ paths:
           schema:
             type: string
             example: "999-9999-9999-99"
-      responses:
-        201:
-          description: "Accepted"
-        404:
-          description: Course Not Found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
-              example:
-                error_source: "update_course"
-                error_message: "Course '999-9999-9999-99' does not exist"
-
-  /admin/course/{course_id}/students:
-    put:
-      tags:
-        - admin
-      operationId: add_students
-      summary: "Add students to a course"
-      description: |
-        Add students to a course.
-        If any student already exist in the class (based off of the students CWID), 
-        their information will be updated.
-      security:
-        - openIDC: [admin:write]
-      parameters:
-        - name: course_id
-          in: path
-          required: true
-          schema:
-            type: string
-            example: "999-9999-9999-99"
       requestBody:
-        required: true
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: "#/components/schemas/CourseMember"
+              $ref: "#/components/schemas/CourseSyncTask"
       responses:
-        201:
+        202:
           description: "Accepted"
-        404:
-          description: Course Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Task"
+        403:
+          description: "An authentication error occurred"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
               example:
-                error_source: "update_course"
-                error_message: "Course '999-9999-9999-99' does not exist"
-    get:
-      tags:
-        - admin
-      operationId: get_students
-      security:
-        - openIDC: [admin:read]
-      summary: "Get all students for a course"
-      description: |
-        Get all information about the students in a course.
-        This is different from the other ones, as it returns all the metadata about a student.
-      parameters:
-        - name: course_id
-          in: path
-          required: true
-          schema:
-            type: string
-            example: "999-9999-9999-99"
-      responses:
-        200:
-          description: "OK"
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/CourseMember"
+                error_source: "Canvas Service"
+                error_message: "Error: invalid token"
         404:
           description: Course Not Found
           content:
@@ -501,16 +460,77 @@ paths:
               example:
                 error_source: enable_assignment
                 error_message: "Assignment '999-9999-9999-99' does not exist"
-  /admin/course/{course_id}/instructor:
-    put:
+  /admin/course/{course_id}/members:
+    get:
       tags:
         - admin
-      operationId: add_instructor
-      summary: "Add an instructor to a course"
+      operationId: get_members
+      security:
+        - openIDC: [admin:read]
+      summary: "Get all members for a course"
       description: |
-        Add an instructor to a course.
-        If the instructor already exists in the class (based off of CWID),
-        their information will be updated.
+        Gets all members for a course.
+        Optional query params can be used to filter by TAs, Instructors, or Students.
+        Can also be used to search by CWID or by name
+      parameters:
+        - name: course_id
+          in: path
+          required: true
+          schema:
+            type: string
+            example: "999-9999-9999-99"
+        - name: "include"
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
+              enum:
+                - tas
+                - instructors
+                - students
+        - name: "name"
+          in: query
+          required: false
+          schema:
+            type: string
+            description: "Part of (or full) name to search for"
+            example: "Alex"
+        - name: "cwid"
+          in: query
+          required: false
+          schema:
+            type: string
+            description: "part of (or full) cwid to search for"
+            example: "9999999"
+      responses:
+        200:
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/CourseMember"
+        404:
+          description: Course Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+              example:
+                error_source: "update_course"
+                error_message: "Course '999-9999-9999-99' does not exist"
+    post:
+      tags:
+        - admin
+      operationId: add_course_member
+      summary: "Add a member to a course"
+      description: |
+        Adds a member to a course. 
+        If they already exist, the request is rejected.
+        If the user does not exist in system, then the request is rejected.
       security:
         - openIDC: [admin:write]
       parameters:
@@ -528,7 +548,41 @@ paths:
               $ref: "#/components/schemas/CourseMember"
       responses:
         201:
-          description: "Accepted"
+          description: "Created"
+        404:
+          description: Course Not Found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+              example:
+                error_source: "update_course"
+                error_message: "Course '999-9999-9999-99' does not exist"
+    put:
+      tags:
+        - admin
+      operationId: update_course_member
+      summary: "Updates a member's membership in a course"
+      description: |
+        Updates a member in a course. If they do not exist, then they are rejected.
+      security:
+        - openIDC: [admin:write]
+      parameters:
+        - name: course_id
+          in: path
+          required: true
+          schema:
+            type: string
+            example: "999-9999-9999-99"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CourseMember"
+      responses:
+        201:
+          description: "Created"
         404:
           description: Course Not Found
           content:
@@ -897,6 +951,32 @@ components:
           type: string
           example: "A message about the status of the task"
 
+    CourseSyncTask:
+      description: "Import a new course from canvas"
+      required:
+        - canvas_id
+      properties:
+        canvas_id:
+          type: integer
+          format: int64
+          example: 999999
+        overwrite_name:
+          type: boolean
+          example: false
+          default: false
+        overwrite_code:
+          type: boolean
+          example: false
+          default: false
+        import_users:
+          type: boolean
+          example: false
+          default: false
+        import_assignments:
+          type: boolean
+          example: false
+          default: false
+
     Credential:
       description: "A credential for external service"
       type: object
@@ -1043,8 +1123,9 @@ components:
           type: string
           example: "Fall.2020.EXCL.101"
         canvas_id:
-          type: string
-          example: "123456"
+          type: integer
+          format: int64
+          example: 123456
         members:
           type: array
           items:
